[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Troll/troll_attack2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Troll/troll_attack3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Troll/troll_idle2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Troll/troll_idle1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Troll/troll_walk1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Troll/troll_walk2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Troll/troll_attack1.png" type="Texture" id=7]
[ext_resource path="res://src/Actors/Troll.gd" type="Script" id=8]
[ext_resource path="res://Music/troll1.wav" type="AudioStream" id=9]
[ext_resource path="res://Music/troll3.wav" type="AudioStream" id=10]
[ext_resource path="res://Music/troll2.wav" type="AudioStream" id=11]
[ext_resource path="res://Music/troll4.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": false,
"name": "attack",
"speed": 7.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 15 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 14, 4 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 15, 12 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 14, 15 )

[node name="Troll" type="KinematicBody2D"]
collision_layer = 8192
collision_mask = 8
script = ExtResource( 8 )
speed = Vector2( 25, 500 )

[node name="TrollStand" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -9, -4 )
frames = SubResource( 1 )
animation = "attack"
frame = 2
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "walking"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="BlockDestroy" type="Area2D" parent="."]
position = Vector2( 14, 1 )
collision_layer = 4096
collision_mask = 330
input_pickable = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockDestroy"]
shape = SubResource( 5 )

[node name="Troll" type="Area2D" parent="."]
collision_layer = 8192
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Troll"]
position = Vector2( 0, 6 )
shape = SubResource( 6 )

[node name="Head" type="Area2D" parent="."]
position = Vector2( 0, -10 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 9 )

[node name="ClubDetect" type="Area2D" parent="."]
position = Vector2( -14, 1 )
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClubDetect"]
shape = SubResource( 10 )

[node name="DetectWhip" type="Area2D" parent="."]
position = Vector2( 0, 3 )
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectWhip"]
shape = SubResource( 11 )

[node name="ClubDamage" type="Area2D" parent="."]
position = Vector2( -15, 1 )
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClubDamage"]
shape = SubResource( 12 )

[node name="Sound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="Sound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="Sound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0

[node name="Sound4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.0

[connection signal="area_entered" from="BlockDestroy" to="." method="_on_BlockDestroy_area_entered"]
[connection signal="body_entered" from="BlockDestroy" to="." method="_on_BlockDestroy_body_entered"]
[connection signal="body_entered" from="Head" to="." method="_on_Head_body_entered"]
[connection signal="body_entered" from="ClubDetect" to="." method="_on_ClubDetect_body_entered"]
[connection signal="area_entered" from="DetectWhip" to="." method="_on_DetectWhip_area_entered"]
[connection signal="body_entered" from="ClubDamage" to="." method="_on_ClubDamage_body_entered"]
